SubBt/force-app/main/default/objects/Parent_Mapping__c/Parent_Mapping__c.object-meta.xml
<CustomObject>
    <label>Parent Mapping</label>
    <nameField>
        <displayFormat>PM-{000000}</displayFormat>
        <label>Parent Mapping Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Parent Mapping</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>