SubBt/force-app/main/default/objects/Parent_Mapping__c/fields/Field_Mapping__c.field-meta.xml
<CustomField>
    <fullName>Field_Mapping__c</fullName>
    <label>Field Mapping</label>
    <referenceTo>Field_Mapping__c</referenceTo>
    <relationshipLabel>Parent Mapping</relationshipLabel>
    <relationshipName>Parent_Mapping</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>